add_library(project_v2 STATIC
    actor/actor.cpp
    actor/actor_ref.cpp
    battle/battle_actor.cpp
    battle/battle_snapshot.cpp
    battle/runtime_world.cpp
    battle/game_systems.cpp
    aoi/aoi_system.cpp
    aoi/spatial_grid.cpp
    common/module_marker.cpp
    diagnostics/diagnostics_manager.cpp
    diagnostics/health_check.cpp
    data/replay_format.cpp
    data/write_behind_store.cpp
    data/cached_data_store.cpp
    ecs/world.cpp
    gateway/battle_data_store.cpp
    service/backend_envelope.cpp
    service/backend_connection.cpp
    service/circuit_breaker.cpp
    service/backend_frame_codec.cpp
    service/backend_server.cpp
    service/error_codes.cpp
    service/service_manifest.cpp
    service/service_registry.cpp
    gateway/gateway_service_bridge.cpp
    gateway/battle_protocol_codec.cpp
    gateway/battle_wire_parser.cpp
    gateway/gateway_command_parser.cpp
    config/config_watcher.cpp
    gateway/demo_server.cpp
    gateway/gateway_actor.cpp
    gateway/gateway_response_parser.cpp
    gateway/gateway_server_bridge.cpp
    gateway/runtime.cpp
    gateway/session_adapter.cpp
    io/io_engine.cpp
    memory/arena.cpp
    player/player_actor.cpp
    room/room_actor.cpp
    room/room_backend_service.cpp
    login/login_backend_service.cpp
    battle/battle_backend_service.cpp
    match/matchmaking_service.cpp
    test/fault_injector.cpp
    runtime/actor_system.cpp
)
target_include_directories(project_v2
    PUBLIC
        "${CMAKE_SOURCE_DIR}/include"
)
target_link_libraries(project_v2
    PUBLIC
        project_app
        project_net
)
apply_project_warnings(project_v2)
